--- a/cavaleiro-dinamarca.htm
+++ b/cavaleiro-dinamarca.htm
@@ -1332,7 +1332,7 @@ function TypeChars(Chars){
 
 
 
-<button class="NavButton" onclick="location='../resumo.htm'; return false;">=&gt;</button>
+<button class="NavButton" onclick="location='../Amareleja/resumo.htm'; return false;">=&gt;</button>
 
 
 </div>
@@ -1434,7 +1434,7 @@ function TypeChars(Chars){
 
 
 
-<button class="NavButton" onclick="location='../resumo.htm'; return false;">=&gt;</button>
+<button class="NavButton" onclick="location='../Amareleja/resumo.htm'; return false;">=&gt;</button>
 
 
 </div>
