--- a/cavaleiro-dinamarca.htm
+++ b/cavaleiro-dinamarca.htm
@@ -960,7 +960,7 @@ var DownCaption = '';
 var Correct = 'Correto!';
 var Incorrect = ''; 
 var GiveHint = '';
-var YourScoreIs = '100%';
+var YourScoreIs = 'A sua pontua&#x00E7;&#x00E3;o &#x00E9;:';
 var BuiltGrid = '';
 var BuiltExercise = '';
 var Penalties = 0;
@@ -1332,7 +1332,7 @@ function TypeChars(Chars){
 
 
 
-<button class="NavButton" onclick="location='../Amareleja/resumo.htm'; return false;">=&gt;</button>
+<button class="NavButton" onclick="location='../Desktop/resumo.htm'; return false;">=&gt;</button>
 
 
 </div>
@@ -1434,7 +1434,7 @@ function TypeChars(Chars){
 
 
 
-<button class="NavButton" onclick="location='../Amareleja/resumo.htm'; return false;">=&gt;</button>
+<button class="NavButton" onclick="location='../Desktop/resumo.htm'; return false;">=&gt;</button>
 
 
 </div>
