--- a/resuno.htm
+++ b/resuno.htm
@@ -1418,7 +1418,7 @@ function TypeChars(Chars){
 
 
 
-<button class="NavButton" onclick="location='nextpage.htm'; return false;">=&gt;</button>
+<button class="NavButton" onclick="location='../viagem-regresso.htm'; return false;">=&gt;</button>
 
 
 </div>
@@ -1494,7 +1494,7 @@ O Cavaleiro vivia com a sua fam&#x00ED;lia numa grande <span class="GapSpan" id=
 
 
 
-<button class="NavButton" onclick="location='nextpage.htm'; return false;">=&gt;</button>
+<button class="NavButton" onclick="location='../viagem-regresso.htm'; return false;">=&gt;</button>
 
 
 </div>
